# coffer

./: .gitattributes  .gitignore  FOLLOWUPS.md  Makefile.am  README.md  bloom-vt.pc.in  coffer.pc.in  configure.ac
.github/workflows/: ci.yml
build-aux/: git-version.sh
contrib/: Makefile.am
contrib/bvt-debug/: Makefile.am  README.md  bvt_debug.c
contrib/cfr-debug/: Makefile.am  README.md  cfr-debug.1  cfr_debug.c
docs/: lottie-spec.md
include/: Makefile.am
include/bloom-vt/: bloom_vt.h
include/coffer/: coffer.h
scripts/: build-ucrt64.sh
src/: Makefile.am  bloom_vt_internal.h  coffer_internal.h  csi.c  damage.c  dcs.c  esc.c  grapheme.c  grid.c  hyperlink.c  keys.c  log.c  lottie.c  modes.c  osc.c  palette.c  parser.c  print.c  reflow.c  scrollback.c  sixel.c  style.c  term.c  width.c
src/scripts/: gen_unicode_tables.py
tests/: Makefile.am  bloom_pty.h  coffer_pty.h  pty.c  pty_w32.c  test_bvt_altscreen.c  test_bvt_keys.c  test_bvt_lottie.c  test_bvt_parser.c  test_bvt_pty.c  test_bvt_sgr.c  test_bvt_sixel.c  test_cfr_altscreen.c  test_cfr_keys.c  test_cfr_log.c  test_cfr_lottie.c  test_cfr_parser.c  test_cfr_pty.c  test_cfr_rep.c  test_cfr_sgr.c  test_cfr_sixel.c  test_cfr_stubs.c
